# sonde

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  VERSIONING.md
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
.claude/hooks/: block-destructive-git.sh  block-main-checkout-race.sh  check-commit-discipline.sh  session-start-briefing.sh
.claude/scripts/: get_agent_moniker.py  get_sonde_sessions.py  new_sonde_worktree.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-please.yml
crates/sonde-demo-builder/: Cargo.toml
crates/sonde-demo-builder/src/: image_fit.rs  main.rs  sitrep.rs
crates/sonde-fec/src/: codec.rs  decode.rs  encode.rs  llr.rs
crates/sonde-fec/tests/: awgn_coding_gain.rs
crates/sonde-link/: Cargo.toml
crates/sonde-link/src/: arq.rs  clock.rs  conn.rs  driver.rs  frame.rs  host.rs  lib.rs  link.rs  mac.rs  profile.rs
crates/sonde-link/tests/: g5_wiring_smoke.rs  link_gates.rs
crates/sonde-phy/: Cargo.toml
crates/sonde-phy-runtime/: Cargo.toml  README.md
crates/sonde-phy-runtime/src/: capabilities.rs  lib.rs  radio.rs  runtime.rs  soundcard.rs  waveform.rs
crates/sonde-phy-runtime/tests/: mainauto_measured_snr.rs  nfsk_e2e.rs  ofdm_floor_e2e.rs  phytransport_loopback.rs  registry_autodetect.rs  standard_registry_e2e.rs  waveform_family_agnostic.rs
crates/sonde-phy/examples/: ber_vs_snr_sweep.rs  sonde_through_channel.rs
crates/sonde-phy/src/: audio_device.rs  constellations.rs  lib.rs  modes.rs  phy_api.rs
crates/sonde-phy/src/ofdm_main/: equalizer.rs  mod.rs  ofdm_params.rs  receiver.rs  transmitter.rs
crates/sonde-phy/src/robustness_floor/: coded_framing.rs  mod.rs  narrow_fsk.rs  wideband_lowdensity.rs
crates/sonde-phy/src/sync/: carrier_offset.rs  mod.rs  preamble.rs
crates/sonde-phy/tests/: api_contract.rs  ber_vs_ebn0_methodology.rs  bit_loading_convergence.rs  coded_framing.rs  constellations_qam.rs  floor_awgn_coding_gain.rs  floor_threshold_sweep.rs  ft818_passband_proxy.rs  knee_measure.rs  nfsk_floor_gate.rs  noise_estimate_gate.rs  ofdm_llr_quality.rs  ofdm_main_gate.rs  oracle_llr_localize.rs  phy_quality_reporting_gate.rs  robustness_floor_fading.rs  step3_coded_fading_gate.rs  sync_impairment_gate.rs  waveform_psd_papr.rs  wideband_floor_vs_ardop_target.rs  zz_sync_impairment_baseline.rs
crates/sonde-rig-cm108/src/: hidraw.rs  writer.rs
crates/sonde-rig-rts/src/: writer.rs
crates/sonde-rx/: Cargo.toml
crates/sonde-rx/src/: lib.rs
crates/sonde-tx/: Cargo.toml
crates/sonde-tx/src/: lib.rs
crates/sonde-tx/tests/: fec_differential_gate.rs
crates/sonde-wasm/: Cargo.toml  README.md
crates/sonde-wasm/src/: channelize.rs  lib.rs  link.rs  modes.rs  spectrogram.rs  types.rs
crates/sonde-wasm/tests/: end_to_end.rs
demo/: .gitignore  README.md  build-assets.sh  build-wasm-bundle.sh  package-lock.json  package.json  playwright.config.mjs
demo/ardop/: SPIKE.md  ardop_channel.py  channel_filter.py  make_payload.py  server.py  spike_roundtrip.py  test_transfer.py  testbench.py
demo/site/: index.html
demo/site/assets/: .gitignore  payload.offsets.json  source-credit.txt
demo/site/css/: app.css
demo/site/js/: ardop-engine.js  audio.js  console.js  controls.js  engine.js  format.js  frame-log.js  image-reveal.js  live-audio.js  main.js  message.js  playback.js  s-meter.js  session-engine.js  session-log.js  waterfall.js
demo/tests/: format.test.mjs  smoke.spec.mjs
dev/: codex-prompt-n0-estimate.md  codex-prompt-n0-followup.md  codex-prompt-real-sync.md  codex-prompt-step3-round2.md  codex-prompt-step3.md  codex-prompt-vb9-round2.md  codex-prompt-vb9-round3.md  codex-prompt-vb9.md  findings-step3-coded-fading-gate.md  findings-vb9-ldpc-coding-gain.md
dev/handoffs/: 2026-06-14-cardinal-magnolia-fern-demo-audit-ardop-pivot.md  2026-06-14-cardinal-magnolia-fern-demo-coded-floor-merged.md  2026-06-14-fec-floor-wiring-phase-a.md  2026-06-14-fec-hook-fading-session.md  2026-06-14-fir-butte-larch-sonde-demo-frontend-ready.md  2026-06-14-floor-fading-equalizer-fix.md  2026-06-14-grouse-poplar-fjord-ardop-connected-session.md  2026-06-14-marten-grouse-cove-link-layer-foundation.md  2026-06-14-moraine-willow-grouse-link-adapt-host.md  2026-06-14-moraine-willow-grouse-link-adapt-p1.md  2026-06-14-moraine-willow-grouse-link-mac-arq-gates.md  2026-06-14-n0-estimate.md  2026-06-14-raven-tamarack-pika-ardop-connected-mode.md  2026-06-14-real-sync-step2.md  2026-06-14-step3-investigation-checkpoint.md  2026-06-14-tamarack-oriole-sycamore-demo-frontend-built.md  2026-06-15-grouse-poplar-fjord-live-channel-message.md  2026-06-15-lupine-yew-harrier-link-adaptation-complete.md  2026-06-15-lupine-yew-harrier-link-frame-adapt.md  2026-06-15-magpie-juniper-alder-demo-tx-timeout.md  2026-06-15-phy-multimode-end-to-end.md  2026-06-15-sonde-99l-phy-quality-adapt.md  2026-06-15-sparrow-hawk-swallow-link-gaps.md  2026-06-16-salamander-pika-pine-link-keystone-b4.md
docs/: 2026-06-14-modem-reality-audit-and-direction.md  git-strategy.md
docs/adr/: 0001-record-architecture-decisions.md  0002-git-workflow-and-governance.md  0003-sonde-phy-runtime-adapter.md  0004-adr-numbering-under-concurrency.md  0005-semver-via-release-please.md  README.md
docs/pitfalls/: implementation-pitfalls.md  testing-pitfalls.md
docs/superpowers/plans/: 2026-06-14-ardop-connected-mode-testbench.md  2026-06-14-fec-floor-wiring.md  2026-06-14-floor-fading-equalizer-llr.md  2026-06-14-sonde-demo-engine-txrx-additions.md  2026-06-14-sonde-demo-frontend.md  2026-06-14-sonde-demo-wasm-engine-and-payload.md  2026-06-14-sonde-phy-runtime-adapter.md
docs/superpowers/specs/: 2026-06-14-fec-floor-wiring-design.md  (+11 more)
hf-channel-sim/: Cargo.toml
hf-channel-sim/examples/: wav_channel.rs
hf-channel-sim/src/: noise.rs
(+2 files in other folders)
