[package]
name = "sonde-phy"
version = "0.1.0"
description = "Clean-sheet HF PHY waveform layer for sonde (AGPL-3.0-only)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
num-complex.workspace = true
rustfft.workspace = true
thiserror.workspace = true
hound.workspace = true

[dev-dependencies]
proptest.workspace = true
rand = "0.8"
# Channel simulator — drives the robustness-floor fading gate
# (tests/robustness_floor_fading.rs). Dev-only; not a runtime dep.
hf-channel-sim.workspace = true
# Real floor codec for the fading gate. DEV-ONLY back-edge: the normal edge is
# `sonde-fec -> sonde-phy` (FecCodec trait); Cargo permits the dev-only reverse
# edge (`cargo tree -e normal,dev` resolves it). Not a runtime dependency.
sonde-fec.workspace = true

[features]
default = []
audio-device = ["dep:cpal"]   # opt-in real-device I/O

[dependencies.cpal]
workspace = true
optional = true

# `sonde-audio-play` is a bench-tool binary that exists only when
# the `audio-device` feature is on. Per Cargo, `required-features`
# silently excludes the bin from the default build — `cargo build`
# (no features) doesn't try to build it, and `cargo build --features
# audio-device` does.
[[bin]]
name = "sonde-audio-play"
path = "src/bin/sonde-audio-play.rs"
required-features = ["audio-device"]
