[package]
name = "sonde-tx"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sonde-tx — the plug-into-radio composition layer. Takes a payload, runs it through sonde-phy's encoder, asserts PTT via sonde-rig-rts, plays the audio, releases PTT. Phase 3 of the sonde hardware bring-up (tuxlink-i3bz). Library + CLI."
keywords = ["ham-radio", "modem", "ofdm", "ptt", "transmitter"]
categories = ["hardware-support", "command-line-utilities"]

[dependencies]
thiserror.workspace = true
sonde-phy = { workspace = true, features = ["audio-device"] }
sonde-fec.workspace = true
sonde-rig-rts.workspace = true
libc = "0.2"

[dev-dependencies]
hf-channel-sim.workspace = true
num-complex.workspace = true
# Analytic-signal (Hilbert) helper for the operational Watterson fading gate.
rustfft.workspace = true
# Receive side, for the end-to-end operational differential gate only.
sonde-rx = { path = "../sonde-rx" }

[[bin]]
name = "sonde-tx"
path = "src/bin/sonde-tx.rs"
